Added console arguments for Palindrome

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "console": "internalConsole",
             "stopOnEntry": false,
             "mainClass": "Palindrome",
-            "args": ""
+            "args": "help arra swim miim"
         },
         {
             "type": "java",
